--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "hcbuilder",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GaussCheng/hcbuilder.git"
+  },
+  "author": "GaussCheng",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GaussCheng/hcbuilder/issues"
+  },
+  "homepage": "https://github.com/GaussCheng/hcbuilder#readme",
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "express": "^4.13.4",
+    "fs": "0.0.2",
+    "multiparty": "^4.1.2",
+    "util": "^0.10.3"
   }
 }
