--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "fs": "0.0.2",
+    "iconv-lite": "^0.4.13",
     "multiparty": "^4.1.2",
     "util": "^0.10.3"
   }
